--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </HEAD>
 <BODY>
 <FORM name=formular>
-<table style="width:100%; height:250px;"><tr><td style="width:60%;">L&auml;nge des Tr&auml;gers in Meter: </td><td><INPUT TYPE=number NAME=tl VALUE="" SIZE=8> </td></tr>
-<tr><td>Preis per Kilogramm:</td><td><INPUT TYPE=number NAME=mp VALUE="" SIZE=8> </td></tr>
+<table style="width:100%; height:250px;"><tr><td style="width:60%;">L&auml;nge des Tr&auml;gers in Meter: </td><td><INPUT TYPE="number" NAME=tl VALUE="" SIZE=8> </td></tr>
+<tr><td>Preis per Kilogramm:</td><td><INPUT TYPE="number" NAME=mp VALUE="" SIZE=8> </td></tr>
 <tr><td>Tr&auml;gerart</td><td><select name="s">
 <option>IPE80</option><option>IPE100</option><option>IPE120</option><option>IPE140</option><option>IPE160</option><option>IPE180</option><option>IPE200</option><option>IPE220</option>
 <option>IPE240</option><option>IPE270</option><option>IPE300</option><option>IPE330</option><option>IPE360</option><option>IPE400</option><option>IPE450</option><option>IPE500</option>
