--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <HTML>
 <HEAD>
-<TITLE>Stahlrechner IPE</TITLE>
+<TITLE>Steelcalc IPE</TITLE>
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link rel="apple-touch-icon-precomposed" href="images/icon-ipad.png" sizes="72*72" />
@@ -14,7 +14,7 @@
 </HEAD>
 <BODY>
 <FORM name=formular>
-<table style="width:100%; height:250px;"><tr><td style="width:60%;">L&auml;nge des Tr&auml;gers in Meter: </td><td><INPUT TYPE="number" NAME=tl VALUE="" SIZE=8> </td></tr>
+<table style="width:100%; height:250px;"><tr><td style="width:60%;">L&auml;nge des Tr&auml;gers in Zentimeter: </td><td><INPUT TYPE="number" NAME=tl VALUE="" SIZE=8> </td></tr>
 <tr><td>Preis per Kilogramm:</td><td><INPUT TYPE="number" NAME=mp VALUE="" SIZE=8> </td></tr>
 <tr><td>Tr&auml;gerart</td><td><select name="s">
 <option>IPE80</option><option>IPE100</option><option>IPE120</option><option>IPE140</option><option>IPE160</option><option>IPE180</option><option>IPE200</option><option>IPE220</option>
