--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <tr><td>Tr&auml;gerart</td><td><select name="s">
 <option>IPE80</option><option>IPE100</option><option>IPE120</option><option>IPE140</option><option>IPE160</option><option>IPE180</option><option>IPE200</option><option>IPE220</option>
 <option>IPE240</option><option>IPE270</option><option>IPE300</option><option>IPE330</option><option>IPE360</option><option>IPE400</option><option>IPE450</option><option>IPE500</option>
-<option>IPE550</option>
+<option>IPE550</option><option>IPE600</option>
 </select></td></tr>
 <tr><td colspan=2><INPUT TYPE=button NAME=knopf VALUE="Tr&auml;ger berechnen!" onclick="loese()"> </td></tr>
 <tr><td>Gewicht des Tr&auml;gers</td><td><INPUT TYPE=text NAME=x1 VALUE="" SIZE=8></td></tr>
