--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
 <script src="js/rechner.js"></script>
 </HEAD>
 <BODY>
-<FORM name=formular>
-<table style="width:100%; height:250px;"><tr><td style="width:60%;">L&auml;nge des Tr&auml;gers in Zentimeter: </td><td><INPUT TYPE="number" NAME=tl VALUE="" SIZE=8> </td></tr>
-<tr><td>Preis per Kilogramm:</td><td><INPUT TYPE="number" NAME=mp VALUE="" SIZE=8> </td></tr>
+<FORM name="formular">
+<table style="width:100%; height:250px;"><tr><td style="width:60%;">Tr&auml;gerl&auml;nge in cm: </td><td><INPUT TYPE="number" NAME="tl" VALUE="" SIZE=8>cm</td></tr>
+<tr><td>Preis per Kilogramm:</td><td><INPUT TYPE="number" NAME="mp" VALUE="" SIZE=8></td></tr>
 <tr><td>Tr&auml;gerart:</td><td><select name="s">
 <option>IPE80</option><option>IPE100</option><option>IPE120</option><option>IPE140</option><option>IPE160</option><option>IPE180</option><option>IPE200</option><option>IPE220</option>
 <option>IPE240</option><option>IPE270</option><option>IPE300</option><option>IPE330</option><option>IPE360</option><option>IPE400</option><option>IPE450</option><option>IPE500</option>
 <option>IPE550</option><option>IPE600</option>
 </select></td></tr>
 <tr><td colspan=2><INPUT TYPE=button NAME=knopf VALUE="Tr&auml;ger berechnen!" onclick="loese()"> </td></tr>
-<tr><td>Gewicht des Tr&auml;gers:</td><td><INPUT TYPE=text NAME=x1 VALUE="" SIZE=8></td></tr>
-<tr><td>Preis des Tr&auml;gers:</td><td><INPUT TYPE=text NAME=x2 VALUE="" SIZE=8></td></tr>
-<tr><td colspan="2" style="font-size:5pt;">Anmerkung: Trotz sorgf&auml;ltiger Programmierung des Programms lassen sich Fehler nicht g&auml;nzlich ausschlie&szlig;en,
-daher k&ouml;nnen wir keine Haftung f&uuml;r Fehler jedweger Form &uuml;bernehmen.</td></tr>
+<tr><td>Gewicht per Meter:</td><td><INPUT TYPE=text NAME="x3" VALUE="" SIZE=8>kg</td></tr>
+<tr><td>Gewicht des Tr&auml;gers:</td><td><INPUT TYPE=text NAME="x1" VALUE="" SIZE=8>kg</td></tr>
+<tr><td>Preis des Tr&auml;gers:</td><td><INPUT TYPE=text NAME="x2" VALUE="" SIZE=8></td></tr>
+<tr><td colspan="2" style="font-size:5pt;">Anmerkung: Trotz sorgf&auml;ltiger Erstellung des Programms lassen sich Fehlfunktionen nicht g&auml;nzlich ausschlie&szlig;en,
+                 daher k&ouml;nnen wir keine Haftung f&uuml;r etwaige Fehler aller Art &uuml;bernehmen.</td></tr>
 </table>
 </FORM>
 </BODY>
